[package]
name = "wasm"
version = "0.1.0"
authors = ["uncoder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.9"
web-sys = { version="0.3.5", features=[ "console", "Window",'CanvasRenderingContext2d','Document','Element','HtmlCanvasElement','CssStyleDeclaration', 'EventTarget', 'CanvasGradient', 'MouseEvent'] }
